2002-10-23  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c : disable GNM_EXPR_PARSE_UNKNOWN_NAMES_ARE_STRINGS
	  All we really needed was simple value matching before
	  stringification.

	* src/xml-io.c (cb_xml_write_name) : split out of.
	(xml_write_names) : here.  rewritten to handle the hashes.

2002-10-23  Morten Welinder  <terra@diku.dk>

	* src/func.c (functions_shutdown): Get rid of the global symbol
	table.

	* src/style.c (style_font_new_simple): Don't create a layout until
	we know we have a font.  Get rid of pango context for negative
	hash entries.
	(style_shutdown): Complain if we leak style font refs.

2002-10-23  Jody Goldberg <jody@gnome.org>

	* src/sheet-merge.c (sheet_merge_add) : improve warning.

	http://bugzilla.gnome.org/show_bug.cgi?id=96617
	* src/gnumeric-pane.c (cb_sheet_object_canvas_event) : Fully init
	  object drag here too.

	* src/workbook.c (workbook_foreach_cell_in_range) : fix.

	* src/position.c (rangeref_normalize) : fix.

	* src/validation.c (validation_eval) : don't unref the val expr too
	  early.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* src/gui-file.c (gui_file_read) : handle workbooks with no sheets.
	* src/workbook-control-gui.c (wbcg_focus_cur_scg) : ditto.
	(show_gui) : ditto.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* src/rendered-value.h : don't use short for width.

	* src/workbook.c (workbook_set_placeholder) : new.
	(workbook_is_placeholder) : ditto.

	* src/gui-util.c (cb_parent_mapped) : new utility.
	(gnumeric_set_transient) : handle the case where we are a transient
	  child of an unmapped parent.

	* src/expr.c (gnm_expr_equal) : name comparison should take scoping
	  into account too.
	(do_expr_as_string) : and here.
	(ets_hash) : use the name itself as a hash key.

	* src/expr-name.c (expr_name_add) : return a copy of the error
	  message.  And ensure that all NULL returns generate errors.
	(expr_name_new) : make this static and internal.
	(name_print_area) : delete.
